--- a/JQMForm1.html
+++ b/JQMForm1.html
@@ -99,7 +99,7 @@
          <fieldset class="ui-grid-a">
           <div class="ui-block-a"><button type="submit"
                data-theme="d">Cancel</button></div>
-          <div class="ui-block-b"><button id="search_btn" input type="submit" data-theme="a" onclick="location='file:///C:/Authentic Jobs/JQMListView1.html'">Submit</button></div>
+          <div class="ui-block-b"><button id="search_btn" input type="submit" data-theme="a" onclick="location='http://charleenramos.github.io/AuthenticJobs/JQMListView1.html'">Submit</button></div>
          </fieldset>
        </div>
 
