--- a/JQMListView1.html
+++ b/JQMListView1.html
@@ -14,7 +14,7 @@
   <body>
     <div data-role="page">
       <div data-role="header">	
-      <a href="abc.html" data-icon="arrow-l" data-theme="b">Index</a>
+      <a href="abc.html" data-icon="arrow-l" data-theme="b" onclick="location='http://charleenramos.github.io/AuthenticJobs/JQMForm1.html'">Back</a>
       <h2><img src="https://authenticjobs.com/assets/images/assets/authenticjobs-light.v1463767349.svg" style="width:20%;"></img></h2></div>
       <div data-role="content">
         <h3>Job Results</h3>
