--- a/JQMListView1.html
+++ b/JQMListView1.html
@@ -19,9 +19,9 @@
       <div data-role="content">
         <h3>Job Results</h3>
         <ul data-role="listview">
-          <li><a href="#">Job 1</a></li>
-          <li><a href="#">Job 2</a></li>
-          <li><a href="#">Job 3</a></li>
+          <li><a href="http://charleenramos.github.io/AuthenticJobs/JQMDetails1.html">Job 1</a></li>
+          <li><a href="http://charleenramos.github.io/AuthenticJobs/JQMDetails1.html">Job 2</a></li>
+          <li><a href="http://charleenramos.github.io/AuthenticJobs/JQMDetails1.html">Job 3</a></li>
         </ul>
 
       </div>
