--- a/JQMForm1.html
+++ b/JQMForm1.html
@@ -73,7 +73,7 @@
        </div>
 
        <div data-role="fieldcontain">
-         <label for="slider">Compensation Per Year:</label>
+         <label for="slider">Minimum Compensation Per Year:</label>
           <input type="range" name="slider" id="slider" value="50"
                  min="0" max="500000" data-highlight="true"  />
        </div>
