--- a/JQMForm1.html
+++ b/JQMForm1.html
@@ -112,7 +112,7 @@
      </form>
 
      <footer data-role="footer" data-position="fixed">
-	          <h3>Powered by Authentic Jobs</h3>
+	          <h3><a href="https://authenticjobs.com/" target='blank'>Powered by Authentic Jobs</a></h3>
      </footer>
 
      </div>
