--- a/JQMDetails1.html
+++ b/JQMDetails1.html
@@ -25,7 +25,7 @@
        <p>Cras condimentum molestie sapien. Maecenas a mauris tincidunt, sodales felis quis, aliquam leo. Morbi interdum condimentum quam at elementum. Cras velit ex, gravida quis interdum sed, fermentum a ante. Suspendisse pellentesque lobortis pretium. Sed auctor tortor sed dolor porta dictum. Cras rhoncus nisl ligula, eu sodales justo porta at. Quisque eget ligula placerat, feugiat odio sed, congue risus. Ut ipsum nunc, pharetra non rhoncus et, ullamcorper quis orci. Quisque efficitur odio id ex sagittis bibendum. Etiam placerat nunc in bibendum sagittis. </p>
      </div>
      <footer data-role="footer" data-position="fixed">
-       <h3>Powered by Authentic Jobs</h3>
+       <h3><a href="https://authenticjobs.com/" target='blank'>Powered by Authentic Jobs</a></h3>
      </footer>
     </div>
   </body>
