--- a/JQMListView1.html
+++ b/JQMListView1.html
@@ -25,7 +25,7 @@
         </ul>
 
       </div>
-      <div data-role="footer"> <h3>Powered by Authentic Jobs</h3></div>
+      <div data-role="footer"> <h3><a href="https://authenticjobs.com/" target='blank'>Powered by Authentic Jobs</a></h3></div>
     </div>
   </body>
 </html>
